--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -55,6 +55,17 @@
 			  </tbody>
 			</table>
 			<%= form_for [@book, @book.book_comments.build] do |f| %>
+				<% if @book.errors.any? %>
+				  <div id="error_explanation">
+				    <h3><%= pluralize(@book.errors.count, "error") %> prohibited this obj from being saved:</h3>
+
+				    <ul>
+				      <% @book.errors.full_messages.each do |message| %>
+				        <li><%= message %></li>
+				      <% end %>
+				    </ul>
+				  </div>
+				<% end %>
 			  <%= f.text_area :content, size: "40x5" %>
 			  <%= f.submit '送信', class: "btn-sm btn-primary" %>
 			<% end %>
